tests/int/check_command/snapshots/integration__int__check_command__restrict__should_annotate_restricted_edge_with_apis.snap
---
source: tests/int/check_command/restrict.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/check
    - check
    - "-c"
    - fixtures/check/rules_restrict_violated.toml
    - "--show-apis"
---
success: false
exit_code: 1
----- stdout -----
crawk check: 1 violation

  RESTRICT cli -> web::repo [RepoType]   (rule: restrict cli -> [analyzer])

----- stderr -----
