tests/int/check_command/snapshots/integration__int__check_command__restrict__should_compose_with_deny.snap
---
source: tests/int/check_command/restrict.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/check
    - check
    - "-c"
    - fixtures/check/rules_restrict_with_deny.toml
---
success: false
exit_code: 1
----- stdout -----
crawk check: 1 violation

  DENY cli -> web::repo   (rule: deny cli -> web::repo)

----- stderr -----
