tests/int/check_command/snapshots/integration__int__check_command__restrict__should_exempt_edges_inside_the_scope.snap
---
source: tests/int/check_command/restrict.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/check
    - check
    - "-c"
    - fixtures/check/rules_restrict_subtree.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
