tests/int/check_command/snapshots/integration__int__check_command__restrict__should_report_target_outside_allowance.snap
---
source: tests/int/check_command/restrict.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/check
    - check
    - "-c"
    - fixtures/check/rules_restrict_violated.toml
---
success: false
exit_code: 1
----- stdout -----
crawk check: 1 violation

  RESTRICT cli -> web::repo   (rule: restrict cli -> [analyzer])

----- stderr -----
